--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -576,7 +576,7 @@ ul.sub-menu {
 }
 
 .carousel-indicators li.active {
-	  background: #FE980F;
+	  background: #3366BB;
 }
 
 .item {
@@ -645,7 +645,7 @@ ul.sub-menu {
 }
 
 .control-carousel:hover{
-  color: #FE980F ;
+  color: #3366BB ;
 }
 
 .right {
@@ -2518,4 +2518,6 @@ h2.title {
   color: #FE980F;
 }
 
-
+.error {
+  color: red;
+}
